# Pandemonium-Renderer2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: Log.hpp  Renderer.hpp
shaders/: triangle.frag  triangle.vert
src/: Renderer.cpp  main.cpp
